--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
     <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
 
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
+<!--    <uses-permission android:name="android.permission.READ_CONTACTS" />-->
     <uses-permission android:name="android.permission.READ_SMS" />
     <uses-feature
         android:name="android.hardware.telephony"
@@ -523,9 +523,9 @@
         <activity
             android:name=".MoreServiceInfoActivity"
             android:screenOrientation="portrait" /> <!-- Book for Some Else Activities -->
-        <activity
-            android:name=".BookSomeOneElsePickContactActivity"
-            android:screenOrientation="portrait" /> <!-- FavDriver Activities -->
+<!--        <activity-->
+<!--            android:name=".BookSomeOneElsePickContactActivity"-->
+<!--            android:screenOrientation="portrait" /> &lt;!&ndash; FavDriver Activities &ndash;&gt;-->
         <activity
             android:name=".FavouriteDriverActivity"
             android:screenOrientation="portrait" />
