--- a/app/build.gradle
+++ b/app/build.gradle
@@ -237,8 +237,8 @@ dependencies {
     implementation 'com.github.shuhart:stepview:1.5.1'
     implementation group: 'com.pubnub', name: 'pubnub-gson', version: '5.2.0'
 
-    implementation 'com.twilio:video-android:7.0.0'
-    implementation 'com.ethanhua:skeleton:1.1.2'
+    implementation 'com.twilio:video-android:7.0.3'
+    implementation "com.github.ethanhua:Skeleton:ff06517d4629e87328c41a1cce614c490ed7fb51"
     implementation 'io.supercharge:shimmerlayout:2.1.0'
 }
 apply plugin: 'com.google.gms.google-services'
