--- a/build.gradle
+++ b/build.gradle
@@ -7,12 +7,12 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.2.2'
+        classpath 'com.android.tools.build:gradle:7.4.2'
         classpath 'com.google.gms:google-services:4.3.13'
         /*Deliver all*/
         classpath "io.realm:realm-gradle-plugin:10.11.1"
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.21'
     }
 }
 
