--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ android {
 
         prod {
             minSdkVersion 21
-            buildConfigField "String", "BASE_URL", "\"https://api.leadryde.com\""
+            buildConfigField "String", "BASE_URL", "\"https://app.leadryde.com\""
         }
     }
 
@@ -77,38 +77,77 @@ android {
         }
     }
     packagingOptions {
-        jniLibs {
-            excludes += ['lib/arm64-v8a/libcardioDecider.so', 'lib/arm64-v8a/libcardioRecognizer.so', 'lib/arm64-v8a/libcardioRecognizer_tegra2.so', 'lib/arm64-v8a/libopencv_core.so', 'lib/arm64-v8a/libopencv_imgproc.so', 'lib/armeabi/libcardioDecider.so', 'lib/armeabi-v7a/libcardioDecider.so', 'lib/armeabi-v7a/libcardioRecognizer.so', 'lib/armeabi-v7a/libcardioRecognizer_tegra2.so', 'lib/armeabi-v7a/libopencv_core.so', 'lib/armeabi-v7a/libopencv_imgproc.so', 'lib/mips/libcardioDecider.so', 'lib/x86/libcardioDecider.so', 'lib/x86/libcardioRecognizer.so', 'lib/x86/libcardioRecognizer_tegra2.so', 'lib/x86/libopencv_core.so', 'lib/x86/libopencv_imgproc.so', 'lib/x86_64/libcardioDecider.so', 'lib/x86_64/libcardioRecognizer.so', 'lib/x86_64/libcardioRecognizer_tegra2.so', 'lib/x86_64/libopencv_core.so', 'lib/x86_64/libopencv_imgproc.so']
-        }
+        exclude 'lib/arm64-v8a/libcardioDecider.so'
+        exclude 'lib/arm64-v8a/libcardioRecognizer.so'
+        exclude 'lib/arm64-v8a/libcardioRecognizer_tegra2.so'
+        exclude 'lib/arm64-v8a/libopencv_core.so'
+        exclude 'lib/arm64-v8a/libopencv_imgproc.so'
+        exclude 'lib/armeabi/libcardioDecider.so'
+        exclude 'lib/armeabi-v7a/libcardioDecider.so'
+        exclude 'lib/armeabi-v7a/libcardioRecognizer.so'
+        exclude 'lib/armeabi-v7a/libcardioRecognizer_tegra2.so'
+        exclude 'lib/armeabi-v7a/libopencv_core.so'
+        exclude 'lib/armeabi-v7a/libopencv_imgproc.so'
+        exclude 'lib/mips/libcardioDecider.so'
+        exclude 'lib/x86/libcardioDecider.so'
+        exclude 'lib/x86/libcardioRecognizer.so'
+        exclude 'lib/x86/libcardioRecognizer_tegra2.so'
+        exclude 'lib/x86/libopencv_core.so'
+        exclude 'lib/x86/libopencv_imgproc.so'
+        exclude 'lib/x86_64/libcardioDecider.so'
+        exclude 'lib/x86_64/libcardioRecognizer.so'
+        exclude 'lib/x86_64/libcardioRecognizer_tegra2.so'
+        exclude 'lib/x86_64/libopencv_core.so'
+        exclude 'lib/x86_64/libopencv_imgproc.so'
+
+        // exclude 'META-INF/NOTICE' // will not include NOTICE file
+        // exclude 'META-INF/LICENSE' // will not include LICENSE file
+        //exclude 'META-INF/notice'
+        // exclude 'META-INF/notice.txt'
+        // exclude 'META-INF/license'
+        // exclude 'META-INF/license.txt'
     }
-
-    namespace 'com.leadryde.userapp'
 }
-
 repositories {
     mavenCentral()
 
+    /*maven {
+        url "https://mint.splunk.com/gradle/"
+    }
+
+    maven { url "https://maven.fabric.io/public" }*/
+
     maven {
         url "https://jitpack.io"
+
     }
 }
-
 dependencies {
-    implementation fileTree(include: ['*.jar', 'projectlibfile.aar', 'sinch_lib.aar', 'yalgaar.aar'], dir: 'libs')
+    //implementation fileTree(include: ['*.jar', '*.aar'], dir: 'libs')
+    // TODO | Local Calling Enable
+    implementation fileTree(include: ['*.jar', '*.aar'], dir: 'libs')
+    // TODO | Local Calling Disable
+    //implementation fileTree(include: ['*.jar', 'projectlibfile.aar', 'sinch_lib_v.aar', 'yalgaar.aar'], dir: 'libs')
 
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.github.sharish:ShimmerRecyclerView:v1.3'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.7.10"
+
     testImplementation 'junit:junit:4.13.2'
 
+    /* Customize PubNub Library and OKHttp*/
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'com.squareup.okio:okio:2.10.0'
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    /* Customize PubNub Library and OKHttp*/
 
+    /* RetroFit related libraries*/
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    /* RetroFit related libraries*/
 
+    /* Android support libraries */
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
@@ -119,7 +158,9 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.4.0'
     implementation 'androidx.palette:palette:1.0.0'
     implementation 'androidx.exifinterface:exifinterface:1.3.3'
+    /* Android support libraries */
 
+    /* Google services related libraries */
     implementation 'com.google.android.gms:play-services-gcm:17.0.0'
     implementation 'com.google.android.gms:play-services-location:20.0.0'
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
@@ -128,34 +169,67 @@ dependencies {
     implementation 'com.google.maps.android:android-maps-utils:2.2.5'
     implementation 'com.google.firebase:firebase-database:20.0.6'
     implementation 'com.google.firebase:firebase-messaging:23.0.8'
+    // Recommended: Add the Firebase SDK for Google Analytics.
     implementation 'com.google.firebase:firebase-analytics:21.1.1'
     implementation 'com.google.firebase:firebase-auth:21.0.8'
+
+    // Add the Firebase Crashlytics SDK.
     implementation 'com.google.firebase:firebase-crashlytics:18.2.13'
 
+    /* Google services related libraries */
+
+    //implementation 'com.facebook.android:facebook-android-sdk:4.18.0'
     implementation 'com.facebook.android:facebook-login:11.2.0'
     implementation 'com.nineoldandroids:library:2.4.0'
+    //implementation 'com.splunk.mint:mint:5.0.0'
     implementation 'com.stripe:stripe-android:8.0.0'
+
+    //implementation 'com.stripe:stripe-android:2.1.0'
+
+
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
+
 
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 
     implementation 'org.apache.commons:commons-lang3:3.6'
+
     implementation 'com.skyfishjy.ripplebackground:library:1.0.1'
 
+    /*Deliver all*/
     implementation 'com.kyleduo.switchbutton:library:2.1.0'
+
     implementation 'com.bignerdranch.android:expandablerecyclerview:1.0.3'
+    /*Deliver all*/
 
     implementation 'io.card:android-sdk:5.+'
+
+    //implementation 'com.braintreepayments.api:braintree:2.18.1'
+
+    //implementation 'com.braintreepayments.api:drop-in:3.7.1'
+
+
+    //implementation 'com.paymaya:sdk-android:0.8.0'
+
     implementation 'co.omise:omise-android:2.6.5'
+    implementation 'org.apache.commons:commons-lang3:3.6'
+    //String letter capitalize by word character or sentence
+    //implementation 'com.xendit:xendit-android:1.1.0'
+
     implementation 'com.neovisionaries:nv-websocket-client:2.12'
+    //implementation('io.github.sac:SocketclusterClientJava:2.0.0') {
+    //    exclude group: 'org.json', module: 'json'
+    //}
+
 
     implementation 'com.github.jd-alexander:LikeButton:0.2.3'
     implementation 'com.github.livechat:chat-window-android:v2.0.3'
     implementation 'org.joda:joda-convert:1.3.1'
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
+
 
     implementation 'com.github.ViksaaSkool:AutoFitEditText:53238e2d29'
     implementation 'uk.co.samuelwall:material-tap-target-prompt:2.15.0'
@@ -167,9 +241,7 @@ dependencies {
     implementation group: 'com.pubnub', name: 'pubnub-gson', version: '5.2.0'
 
     implementation 'com.twilio:video-android:7.0.0'
-    implementation "com.github.ethanhua:Skeleton:ff06517d4629e87328c41a1cce614c490ed7fb51"
     implementation 'io.supercharge:shimmerlayout:2.1.0'
 }
-
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-android'
